Fix wrong alignment in filters

--- a/resources/assets/src/scss/layouts/_filters.scss
+++ b/resources/assets/src/scss/layouts/_filters.scss
@@ -45,4 +45,9 @@
     height: 17px;
     margin-left: 20px;
   }
+
+  .popup__trigger {
+    align-items: center;
+    display: flex;
+  }
 }
